overflow bug

--- a/src/App.css
+++ b/src/App.css
@@ -33,7 +33,7 @@ path.lost {
 
 .App {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 3fr 4fr;
   position: relative;
 }
 
